kubernetes/base/flasher/frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  annotations:
    keel.sh/approvals: "1"
    keel.sh/policy: all
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 1m"
    keel.sh/notify: deployments
    # keel.sh/match-tag: "true" # only makes a difference when used with 'force' policy, will only update if tag matches :dev->:dev, :prod->:prod 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      volumes:
        - name: frontend-nginx-conf-d-volume
          configMap:
            name: frontend-nginx-conf-d-config
        - name: nginx-cache-volume
          persistentVolumeClaim:
            claimName: pvc-nginx-cache
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - image: library/nginx:1.18-alpine
          imagePullPolicy: IfNotPresent
          name: frontend-nginx
          command:
            - "nginx"
            - "-g"
            - "daemon off;"
          volumeMounts:
            - name: frontend-nginx-conf-d-volume
              mountPath: /etc/nginx/conf.d
            - name: nginx-cache-volume
              mountPath: /var/lib/nginx/cache
          ports:
            - name: http-frontend
              containerPort: 80
          readinessProbe:
            httpGet:
              port: 80
              path: /
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
        - image: frontend
          imagePullPolicy: Always
          name: nextjs
          ports:
            - name: http-nextjs
              containerPort: 3000
