kubernetes/base/flasher/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
    service: frontend
spec:
  ports:
    - name: http-nextjs
      port: 3000
      protocol: TCP
    - name: http
      port: 80
      protocol: TCP
  selector:
    app: frontend
