kubernetes/base/flasher/frontend/virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-virtualservice
spec:
  hosts:
    - "jkanda.fr"
  gateways:
    - flasher-gateway
  http:
    - match:
        - uri:
            exact: /_next/image
      route:
        - destination:
            host: frontend
            port:
              number: 80
    - match:
        - uri:
            exact: "/sitemap.xml"
      rewrite:
        uri: "/api/sitemap.xml"
      route:
        - destination:
            host: frontend
            port:
              number: 3000
    - route:
        - destination:
            host: frontend
            port:
              number: 3000
          # headers:
          #   response:
          #     add:
          #       X-Robots-Tag: "noindex, nofollow"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: www-redirect-frontend-virtualservice
spec:
  gateways:
  - flasher-gateway
  hosts:
  - www.jkanda.fr
  http:
  - match:
    - authority:
        exact:
          www.jkanda.fr
    redirect:
      authority: jkanda.fr
